<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/textWelcome"
        android:textAlignment="center"
        android:textColor="#8A2BE2"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOkrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/inputOkrag"
        android:textColor="#8A2BE2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvOkrag"
        tools:layout_editor_absoluteX="-1dp">

        <TextView
            android:id="@+id/tvInputX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/podaj_x"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputX"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/podajWarX"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvInputY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/podaj_y"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputY"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/poadjWarY"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvInputR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inputR"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/inputWarR"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvPoit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/inputPoint"
        android:textColor="#8A2BE2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvPoit"
        tools:layout_editor_absoluteX="219dp">

        <TextView
            android:id="@+id/tvInputXPoit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/podaj_x"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputXPoit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/podajWarX"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvInputYPoit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/podaj_y"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputYPoit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/poadjWarY"
            android:inputType="number"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="566dp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wyczy"
        app:layout_constraintEnd_toStartOf="@+id/btnSprawdz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

    <Button
        android:id="@+id/btnSprawdz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sprawd"
        app:layout_constraintEnd_toStartOf="@+id/btnInfo"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/informacje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSprawdz"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />


</androidx.constraintlayout.widget.ConstraintLayout>